# collective-phase-control-fabric

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  FORMAL_MODEL.md  LICENSE  NOTICE  README.ja.md  README.md  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES.md  adapter-capability-manifest.json  agent-manifest.json  llms.txt  publication-files.txt  pyproject.toml
.github/workflows/: ci.yml  security.yml  workflow.yml
audit/: audit-v0.3.md  audit-v0.4.md  audit-v0.5.md  audit-v0.6.md  findings-v0.3.json  findings-v0.4.json  findings-v0.5.json  findings-v0.6.json  findings.json
deploy/: Dockerfile.api  Dockerfile.worker  alembic.ini
deploy/alembic/: env.py
deploy/envoy/: README.md  runner-gateway.yaml
docs/: adapters.md  analogy-boundary.md  audit-v0.2.md  command-map.md  concept-mapping.md  deployment.md  evidence-model.md  first-ten-minutes.md  for-agents.md  handoffs.md  implementation-plan.md  index.md  installation.md  offline-orientation.md  operational-profile.md  operations-evidence.md  portability.md  release-readiness.md  release.md  remote-workspaces.md  research-basis.md  scientific-boundaries.md  security-boundary.md  security.md  source-of-record.md  upstream-reconnaissance.md
docs/reference/: README.md
docs/tutorial-v0.3/: README.md  generate.py
docs/tutorial-v0.4/: README.md  generate.py
docs/tutorial-v0.5/: README.md  generate.py
docs/tutorial-v0.6/: README.md
fixtures/: certified_catalyst.json  external_claim_bundle.json  false_autocatalysis.json  productivity_without_maintenance.json  reachability_without_productivity.json  regeneration_deadlock.json  sequential_task_guard.json  verification_overload.json  verified_productive_organization.json
fixtures/handoffs/: alt-capability-candidate.json  cmgl-memory-candidate.json  external-collective-advantage-certificate.json  external-phase-evidence-certificate.json  pcs-skill-candidate.json  vek-evidence-candidate.json
release-evidence/: README.md  schema.json
schemas/v0.1.0/: action.schema.json  external-certificate.schema.json  handoff-candidate.schema.json  maintenance-witness.schema.json  phase-contract.schema.json  phase-evidence-certificate.schema.json  productive-plan-witness.schema.json  source-decision.schema.json  transformation-network.schema.json
schemas/v0.2.0/: action-receipt.schema.json  action.schema.json  adapter-capability.schema.json  adapter-observation.schema.json  ccr-agent-explain-report.schema.json  ccr-storage-doctor-report.schema.json  coordinate-invariant-witness.schema.json  external-certificate.schema.json  formation-sequence-witness.schema.json  generative-catalytic-witness.schema.json  outcome-contract.schema.json  persistence-witness.schema.json  phase-contract.schema.json  pic-agent-check-report.schema.json  pic-agent-explain-report.schema.json  pic-canonical-readiness-report.schema.json  pic-phase-plan-report.schema.json  projection-receipt.schema.json  rate-interval-witness.schema.json  resource-potential-witness.schema.json  source-artifact-envelope.schema.json  structural-transition.schema.json  transformation-network.schema.json  verification-network-witness.schema.json
schemas/v0.3.0/: acceleration-evidence.schema.json  action-receipt.schema.json  action.schema.json  adapter-capability.schema.json  adapter-observation.schema.json  adapter-output.schema.json  branch-effect-contract.schema.json  contract-draft.schema.json  coordination-event-ledger.schema.json  formation-sequence-witness.schema.json  generalized-raf-witness.schema.json  measurement-protocol.schema.json  open-system-resource-witness.schema.json  organization-witness.schema.json  perturbation-result.schema.json  perturbation-suite.schema.json  phase-contract.schema.json  projection-receipt.schema.json  rate-feasibility-witness.schema.json  siphon-coverage-witness.schema.json  source-artifact-envelope.schema.json  state-marking.schema.json  transformation-network.schema.json  trial-result-certificate.schema.json  trust-policy.schema.json  verification-network-witness.schema.json  workspace-generation.schema.json
schemas/v0.4.0/: acceleration-evidence.schema.json  action-receipt.schema.json  action.schema.json  adapter-capability.schema.json  analysis-executable-record.schema.json  analysis-record.schema.json  analysis-snapshot.schema.json  branch-effect-contract.schema.json  bundle-root-attestation.schema.json  contract-draft.schema.json  coordination-event-ledger.schema.json  dataset-record.schema.json  evidence-record.schema.json  execution-policy.schema.json  flux-coupling-result.schema.json  formation-sequence-witness.schema.json  (+29 more)
scripts/: check_critical_coverage.py  check_external_release_evidence.py  check_fixtures.py  check_mutation_score.py  check_publication_hygiene.py  check_release_artifacts.py  check_schemas.py  configure_test_database.py  generate_references.py  generate_sbom.py  generate_v3_schemas.py  generate_v5_schemas.py  generate_v6_schemas.py  run_chaos_harness.py  run_load_harness.py  run_restore_harness.py  stage_publication.py
tests/: __init__.py  test_atomic_concurrency.py  test_cli_v2.py  test_cli_v3.py  test_core.py  test_fixtures.py  test_handoffs.py  test_metrics_and_structure.py  test_planner_and_witness_branches.py  test_process_boundary.py  test_properties.py  test_semantic_negatives.py  test_tutorial_v3.py  test_tutorial_v4.py  test_v2.py  test_v2_branches.py  test_v3.py  test_v3_branches.py  test_v3_deep_adversarial.py  test_v4.py  test_v4_boundaries.py  test_v4_operational.py  test_v4_planner_boundaries.py  test_v4_science_boundaries.py  test_v4_workspace_boundaries.py  test_v5.py  test_v5_assurance_edges.py  test_v5_generation_assurance.py  test_v6_api_assurance.py  test_v6_assurance_branches.py  test_v6_authority.py  test_v6_cli_auth.py  test_v6_coordination_trial_assurance.py  test_v6_db_worker_assurance.py  test_v6_golden_semantics.py  test_v6_intervention.py  test_v6_model_assurance.py  test_v6_models_trust.py  test_v6_onboarding_repairs.py  test_v6_operations_release.py  (+13 more)
(+187 files in other folders)
