[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "collective-phase-control-fabric"
version = "0.6.0"
description = "Evidence-bound analysis and finite intervention control for collective workflows."
readme = "README.md"
requires-python = ">=3.12,<3.15,!=3.14.0,!=3.14.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Collective Phase Control Fabric contributors" }]
keywords = [
  "python",
  "evidence-control",
  "collective-intelligence",
  "multi-agent-systems",
  "decision-support",
  "scientific-computing",
  "network-science",
  "petri-nets",
  "reaction-networks",
  "provenance",
  "audit-trail",
  "digital-signatures",
  "supply-chain-security",
  "reproducibility",
  "dsse",
  "oidc",
  "fastapi",
  "postgresql",
  "kubernetes",
  "uv",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=49,<50",
  "jsonschema>=4.26,<5",
  "networkx>=3.6.1,<4",
  "pydantic>=2.13.4,<3",
  "httpx>=0.28,<1",
  "keyring>=25.7,<26",
]

[project.optional-dependencies]
server = [
  "click>=8.3.3,<9",
  "fastapi>=0.139,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
  "psycopg[binary,pool]>=3.2,<4",
  "alembic>=1.18.5,<2",
  "uvicorn>=0.35,<1",
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-sdk>=1.35,<2",
  "boto3>=1.39,<2",
]
worker = [
  "click>=8.3.3,<9",
  "fastapi>=0.139,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
  "psycopg[binary,pool]>=3.2,<4",
  "alembic>=1.18.5,<2",
  "uvicorn>=0.35,<1",
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-sdk>=1.35,<2",
  "boto3>=1.39,<2",
]
runner = ["httpx[http2]>=0.28,<1"]
solver = [
  "z3-solver>=4.16,<4.17",
]
aws-kms = ["boto3>=1.39,<2"]
gcp-kms = ["google-cloud-kms>=3,<4"]
azure-kms = ["azure-identity>=1.24,<2", "azure-keyvault-keys>=4.11,<5"]
pkcs11 = ["python-pkcs11>=0.9,<1"]
all = [
  "click>=8.3.3,<9",
  "fastapi>=0.139,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.51,<2.1",
  "psycopg[binary,pool]>=3.2,<4",
  "alembic>=1.18.5,<2",
  "uvicorn>=0.35,<1",
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-sdk>=1.35,<2",
  "boto3>=1.39,<2",
  "httpx[http2]>=0.28,<1",
  "z3-solver>=4.16,<4.17",
  "google-cloud-kms>=3,<4",
  "azure-identity>=1.24,<2",
  "azure-keyvault-keys>=4.11,<5",
  "python-pkcs11>=0.9,<1",
]

[project.scripts]
cpcf = "cpcf_cli.main:main"
cpcf-api = "cpcf_api.main:main"
cpcf-worker = "cpcf_worker.main:main"

[project.urls]
Documentation = "https://github.com/kadubon/collective-phase-control-fabric#readme"
Issues = "https://github.com/kadubon/collective-phase-control-fabric/issues"
Repository = "https://github.com/kadubon/collective-phase-control-fabric"

[tool.hatch.build.targets.wheel]
packages = [
  "src/collective_phase_control_fabric",
  "packages/cpcf-cli/src/cpcf_cli",
  "packages/cpcf-api/src/cpcf_api",
  "packages/cpcf-worker/src/cpcf_worker",
  "packages/cpcf-runner-protocol/src/cpcf_runner_protocol",
]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "collective_phase_control_fabric/data/schemas"
"fixtures" = "collective_phase_control_fabric/data/fixtures"
"docs" = "collective_phase_control_fabric/data/docs"
"AGENTS.md" = "collective_phase_control_fabric/data/AGENTS.md"
"llms.txt" = "collective_phase_control_fabric/data/llms.txt"
"agent-manifest.json" = "collective_phase_control_fabric/data/agent-manifest.json"
"SPEC.md" = "collective_phase_control_fabric/data/SPEC.md"
"FORMAL_MODEL.md" = "collective_phase_control_fabric/data/FORMAL_MODEL.md"

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/audit",
  "/docs",
  "/fixtures",
  "/schemas",
  "/scripts",
  "/packages",
  "/deploy",
  "/src",
  "/tests",
  "/adapter-capability-manifest.json",
  "/agent-manifest.json",
  "/*.md",
  "/LICENSE",
  "/llms.txt",
  "/NOTICE",
  "/pyproject.toml",
  "/uv.lock",
  "/.python-version",
]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "build>=1.3,<2",
  "hypothesis>=6.136,<7",
  "mutmut>=3.6,<4",
  "mypy>=1.16,<2",
  "pip-audit>=2.10.1,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "twine>=6.1,<7",
  "types-jsonschema>=4.26,<5",
  "types-networkx>=3.6,<4",
  "z3-solver>=4.16,<4.17",
]
security = [
  "pip-audit>=2.10.1,<3",
]

[tool.uv]
required-version = ">=0.11.28,<0.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"
markers = [
  "postgres: requires a disposable PostgreSQL 18 integration database",
]

[tool.coverage.run]
branch = true
source = [
  "collective_phase_control_fabric",
  "cpcf_cli",
  "cpcf_api",
  "cpcf_worker",
  "cpcf_runner_protocol",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mutmut]
source_paths = ["src", "packages/cpcf-api/src"]
only_mutate = [
  "src/collective_phase_control_fabric/v6/authority.py",
  "src/collective_phase_control_fabric/v6/trust.py",
  "src/collective_phase_control_fabric/v6/registry.py",
  "src/collective_phase_control_fabric/v6/storage.py",
  "src/collective_phase_control_fabric/v6/projection.py",
  "src/collective_phase_control_fabric/v6/runner.py",
  "src/collective_phase_control_fabric/v6/science.py",
  "src/collective_phase_control_fabric/v6/structural_analysis.py",
  "src/collective_phase_control_fabric/v6/intervention.py",
  "src/collective_phase_control_fabric/v6/planning.py",
  "src/collective_phase_control_fabric/v6/trials.py",
  "src/collective_phase_control_fabric/v6/coordination.py",
  "src/collective_phase_control_fabric/v6/onboarding.py",
  "src/collective_phase_control_fabric/v6/repairs.py",
  "packages/cpcf-api/src/cpcf_api/runner_gateway.py",
  "packages/cpcf-cli/src/cpcf_cli/auth.py",
]
pytest_add_cli_args = ["-q"]
pytest_add_cli_args_test_selection = [
  "tests/test_v6_api_assurance.py",
  "tests/test_v6_assurance_branches.py",
  "tests/test_v6_authority.py",
  "tests/test_v6_db_worker_assurance.py",
  "tests/test_v6_golden_semantics.py",
  "tests/test_v6_intervention.py",
  "tests/test_v6_cli_auth.py",
  "tests/test_v6_coordination_trial_assurance.py",
  "tests/test_v6_model_assurance.py",
  "tests/test_v6_models_trust.py",
  "tests/test_v6_planning_assurance.py",
  "tests/test_v6_onboarding_repairs.py",
  "tests/test_v6_runner_gateway.py",
  "tests/test_v6_science_assurance.py",
  "tests/test_v6_science_planner.py",
  "tests/test_v6_service_boundaries.py",
  "tests/test_v6_structural_analysis.py",
  "-k",
  "not test_kms_signers_normalize_provider_encodings and not test_p256_principals_sign_verify_and_reject_algorithm_or_encoding_substitution",
]
mutate_only_covered_lines = true
timeout_multiplier = 2.0
timeout_constant = 1.0
